[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clock"
dynamic = ["version"]
description = "clock add-on for NVDA"
maintainers = [
	{name = "Hrvoje Katic", email = "hrvojekatic@gmail.com"},
	{name = "Abdelkrim BENSAÏD", email = "abdelkrim.bensaid@gmail.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "COPYING.TXT"}
dependencies = [
	# Build add-on
	"scons==4.10.1",
	"Markdown==3.10",
	# Translations management
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.1.0",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	# Lint
	"uv==0.11.15",
	"ruff==0.14.5",
	"pre-commit==4.2.0",
	"pyright[nodejs]==1.1.411",
	"wxpython>=4.2.5",
	"configobj>=5.0.9",
]
[project.urls]
Repository = "https://github.com/hkatic/clock"

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
	"sconstruct",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"buildVars.py",
	"addon/globalPlugins/clock/alarms",
	"addon/globalPlugins/clock/convertdate",
	"addon/globalPlugins/clock/pymeeus",
	"addon/globalPlugins/clock/pytz",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
 ]
logger-objects = ["logHandler.log"]

[tool.ruff.lint.per-file-ignores]
# sconscripts contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]

[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Windows"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	"sconstruct",
	".git",
	"__pycache__",
	".venv",
	"site_scons",
	".github/scripts",
	"addon/globalPlugins/clock/alarms",
	"addon/globalPlugins/clock/convertdate",
	"addon/globalPlugins/clock/pymeeus",
	"addon/globalPlugins/clock/pytz",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
]

# Tell pyright where to load python code from
extraPaths = [
	"./addon",
	"../nvda/source",
]

# General config
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# Stricter typing
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Compliant rules
reportAssertAlwaysTrue = true
reportAssertTypeFailure = true
reportDuplicateImport = true
reportIncompleteStub = true
reportInconsistentOverload = true
reportInconsistentConstructor = true
reportInvalidStringEscapeSequence = true
reportInvalidStubStatement = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
reportMissingModuleSource = true
reportMissingImports = true
reportNoOverloadImplementation = true
reportOptionalContextManager = true
reportOverlappingOverload = true
reportPrivateImportUsage = true
reportPropertyTypeMismatch = true
reportSelfClsParameterName = true
reportTypeCommentUsage = true
reportTypedDictNotRequiredAccess = true
reportUndefinedVariable = true
reportUnusedExpression = true
reportUnboundVariable = true
reportUnhashable = true
reportUnnecessaryCast = true
reportUnnecessaryContains = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedClass = true
reportUnusedCoroutine = true
reportUnusedExcept = true

# Should switch to true when possible
reportDeprecated = false

# Can be enabled by generating type stubs for modules via pyright CLI
reportMissingTypeStubs = false

# Bad rules
# These are roughly sorted by compliance to make it easier for devs to focus on enabling them.
# Errors were last checked Feb 2025.
# 1-50 errors
reportUnsupportedDunderAll = false
reportAbstractUsage = false
reportUntypedBaseClass = false
reportOptionalIterable = false
reportCallInDefaultInitializer = false
reportInvalidTypeArguments = false
reportUntypedNamedTuple = false
reportRedeclaration = false
reportOptionalCall = false
reportConstantRedefinition = false
reportWildcardImportFromLibrary = false
reportIncompatibleVariableOverride = false
reportInvalidTypeForm = false

# 50-100 errors
reportGeneralTypeIssues = false
reportOptionalOperand = false
reportUnnecessaryComparison = false
reportFunctionMemberAccess = false
reportUnnecessaryIsInstance = false
reportUnusedFunction = false
reportImportCycles = false
reportUnusedImport = false
reportUnusedVariable = false

# 100-1000 errors
reportOperatorIssue = false
reportAssignmentType = false
reportReturnType = false
reportPossiblyUnboundVariable = false
reportMissingSuperCall = false
reportUninitializedInstanceVariable = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
reportImplicitStringConcatenation = false
reportIncompatibleMethodOverride = false
reportPrivateUsage = false

# 1000+ errors
reportUnusedCallResult = false
reportOptionalSubscript = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportImplicitOverride = false
reportIndexIssue = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
